--- a/bar_chart/styles.css
+++ b/bar_chart/styles.css
@@ -1,7 +1,17 @@
 #chart {
-    background-color: grey;
-  }
-  
-  .bar {
+    background-color: white;
+}
+
+.bar {
     fill: #2c1aff;
-  }
+}
+
+#tooltip {
+    opacity: 0;
+    background-color: white;
+    position: absolute;
+    border: solid;
+    border-width: 2px;
+    border-radius: 5px;
+    padding: 5px;
+}
